--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,12 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 # https://hkdk.events/8a3jnup2865qpp
 # Este es el signing secret del webhook
 STRIPE_ENDPOINT_SECRET=whsec_gOgq3D5JQcLaBqx1Mefuh3GuIILAkOlW
+
+
+AUTH_DATABASE_URL=mongodb+srv://root-user:b8oO2SBUjhAQvzSD@auth-microservice-db.4hewpqe.mongodb.net/AuthDB
+
+
+JWT_SECRET=EstoDebeSerUNStringSeguro
+
+
+ORDERS_DATABASE_URL=postgresql://orders-db_owner:lBHueVv03XFj@ep-blue-feather-a5rdsi5b.us-east-2.aws.neon.tech/orders-db?sslmode=require
